resources/kubernetes/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: indy-network-explorer
  name: indy-network-explorer-svc
  namespace: demo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: indy-network-explorer
