resources/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: indy-network-explorer-ing
  namespace: demo
spec:
  rules:
    - host: indy.nxd.foundation
      http:
        paths:
          - backend:
              service:
                name: indy-network-explorer-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: indy-network-explorer-svc
                port:
                  number: 80
            path: /*
            pathType: Prefix
  tls:
    - hosts:
        - indy.nxd.foundation
      secretName: tls-secret-nxd
